/*
 * SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

// This proto is in alpha version and might be subject to future changes
package nvidia_ace.services.a2x_export_config.v1;

service A2XExportConfigService {
  rpc GetConfigs(ConfigsTypeRequest) returns (stream A2XConfig) {}
}

message ConfigsTypeRequest {
  enum ConfigType {
    YAML = 0; // YAML should be chosen for updating the A2F MS
    JSON = 1;
  }
  ConfigType config_type = 1;
}

message A2XConfig {
  // E.g.:
  // contains claire_inference.yaml
  string name = 1;
  // File Content
  string content = 2;
}

// nvidia_ace.services.a2f_export_config.v1
// v0.1.0%  
